refactor: simplify history navigation and optimize for SEO

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 全局 API 地址
 # 全局 API 地址
-VITE_GLOBAL_API="http://localhost:6688"
+VITE_GLOBAL_API="http://127.0.0.1:6688/api/"
 # VITE_GLOBAL_API="https://api-hot.efefee.cn"
 
 # ICP 备案号
