--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # 生产环境全局 API 地址
 # 运行 npm run build (或 pnpm build) 时会自动使用此地址
-VITE_GLOBAL_API="http://easynews.com.cn/api/"
+VITE_GLOBAL_API="https://easynews.com.cn/api/"
 
 # ICP 备案号
 VITE_ICP = "粤ICP备2024223142号-1"
