--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dailyhot",
   "description": "今日热榜",
-  "author": "talent.limite.ai",
+  "author": "talent.limited.ai",
   "github": "https://github.com/imsyy",
   "version": "1.0.0",
   "private": true,
